# nellos

./: .gitmodules  README.md
bootloader_uefi/: BUILDING.md  Cargo.toml  run.sh
bootloader_uefi/.cargo/: config.toml
bootloader_uefi/src/: alloc_uefi.rs  main.rs
kernel/: Cargo.toml  __ran  kernel.ld  x86_64-none-kernel-nabi.json
kernel/.cargo/: config.toml
kernel/src/: fallible.rs  global_alloc.rs  main.rs
libs/acpica_sys/: Cargo.toml  build.rs
libs/acpica_sys/acpica/source/components/utilities/: utclib.c
libs/acpica_sys/acpica/source/include/: acapps.h
libs/acpica_sys/acpica/source/include/platform/: acenv.h  acnellkernel.h
libs/acpica_sys/proxybuild/: Cargo.toml
libs/acpica_sys/proxybuild/src/: main.rs
libs/acpica_sys/src/: _binds.rs  lib.rs  osl.rs  overrides.rs
libs/acpica_sys/src_c/: binds.h
libs/newefi/: Cargo.toml
libs/newefi/newefi_sys/: Cargo.toml
libs/newefi/src/: lib.rs  system_table.rs
libs/newefi/src/ucs2/: mod.rs
libs/prebootlib/: Cargo.toml
libs/prebootlib/src/: lib.rs
testspace/: build_and_run.sh  justfile  sc
tools/makediskimg/: .gitignore  Cargo.toml
tools/makediskimg/src/: gpt.rs  main.rs  mbr.rs  memdisk.rs
