[package]
name = "acpica_sys"
version = "0.1.0"
authors = ["Jan Katzer <jan@katzer.dev>"]
edition = "2018"

#build = "build.rs"
#links = "acpicasys"

#[lib]
##crate-type = ["staticlib"]

[dependencies]
cty = "0.2.1"

[build-dependencies]
#cc = "1.0.66"
glob = "0.3.0"
#bindgen = "0.56.0" # See related note in build.rs
