[package]
name = "makediskimg"
version = "0.1.0"
authors = ["Jan Katzer <jan@katzer.dev>"]
edition = "2018"

[dependencies]
uuid = {version = "0.8.1", features = ["v4"]}
crc = "1.8.1"
byteorder = "1.3.4"
fatfs = "0.3.4"
gpt = "1.0.0"
widestring = "0.4.3"
#log = {version = "0.4.11", features = ["max_level_trace"]}
log = "0.4.11"
simple_logger = "1.11.0"
fscommon = "0.1.1"
clap = "2.33.3"
